--- a/pck/istat.lpi
+++ b/pck/istat.lpi
@@ -78,6 +78,7 @@
     <Linking>
       <Debugging>
         <DebugInfoType Value="dsDwarf3"/>
+        <UseExternalDbgSyms Value="True"/>
       </Debugging>
     </Linking>
   </CompilerOptions>
