--- a/pck/istat.lpi
+++ b/pck/istat.lpi
@@ -13,6 +13,9 @@
       <Title Value="Istat"/>
       <UseAppBundle Value="False"/>
       <ResourceType Value="res"/>
+      <Resources Count="1">
+        <Resource_0 FileName="..\src\istat.xml" Type="RCDATA" ResourceName="ISTAT"/>
+      </Resources>
     </General>
     <BuildModes>
       <Item Name="Default" Default="True"/>
@@ -60,6 +63,10 @@
       </Unit>
       <Unit>
         <Filename Value="..\src\istat.batch.popolazione.pas"/>
+        <IsPartOfProject Value="True"/>
+      </Unit>
+      <Unit>
+        <Filename Value="batch.rc"/>
         <IsPartOfProject Value="True"/>
       </Unit>
     </Units>
