--- a/pck/istat.lpi
+++ b/pck/istat.lpi
@@ -69,6 +69,10 @@
         <Filename Value="batch.rc"/>
         <IsPartOfProject Value="True"/>
       </Unit>
+      <Unit>
+        <Filename Value="..\src\istat.batch.firebird.pas"/>
+        <IsPartOfProject Value="True"/>
+      </Unit>
     </Units>
   </ProjectOptions>
   <CompilerOptions>
